yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myimage-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - myimage.mypersonaldomain123.com
    secretName: tls-secret-tres
  rules:
  - host: myimage.mypersonaldomain123.com
    http:
      paths:
      - backend:
          serviceName: myimage-service
          servicePort: 80
        path: /(.*)
